fix navbar spacing issue
- added --navbar-height variable to globals.css
- body in globals.css uses padding-top equal to --navbar-height
- .navlink in navbar CSS now uses --navbar-height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,8 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
+  --navbar-height: 3.5rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -90,6 +92,7 @@ body {
   background-color: #1E1E1E;
   margin: 0;
   padding: 0;
+  padding-top: var(--navbar-height);
 }
 
 a {
